# interpreter

./: CMakeLists.txt  README.md  codecov.sh  externalGoogleTest  gcov.sh
include/: interpreter.h  parser.h  tokenization.h
scripts/: run.sh  setup.sh
src/: interpreter.cpp  interpreter.hpp  main.cpp  parser.cpp  parser.hpp  tokenization.cpp
tests/: CMakeLists.txt  test_interpreter.cpp
